# cairn

./: .commitlintrc.json  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  codecov.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench/locomo/: .gitignore  README.md  harness.py  requirements.txt  run.sh
docs/: launch.md
memory/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
memory/benchmarks/locomo/: .gitignore  BLOG_DRAFT.md  README.md  cleanup.sh  download_dataset.sh  requirements.txt  rescore.py  run.py  scoring.py
memory/benchmarks/locomo/fixtures/: sample.json
memory/docs/: ARCHITECTURE.md  MCP_INTEGRATION.md  PROGRESS.md  ROADMAP.md  SETUP.md  USER_GUIDE_ZH.md
memory/src-tauri/: Cargo.toml  tauri.conf.json
memory/src-tauri/capabilities/: default.json
memory/src-tauri/examples/: consolidate_repro.rs
memory/src-tauri/icons/: icon.icns
memory/src-tauri/migrations/: 20260513000001_initial.sql  20260513000002_vector.sql  20260513000003_hierarchical_memory.sql  20260513000004_sync.sql  20260513000005_retrieval_signals.sql  20260513000006_usage_log.sql  20260513000007_capture_sources.sql  20260515000001_fts_trigram.sql  20260515000002_imported_docs.sql  20260515000003_exported_blocks.sql  20260519000001_entity_edits.sql  20260520000001_dedup_state.sql  20260520000002_archive.sql  20260521000001_alias_routing.sql  20260521000002_entity_sticky.sql  20260602000001_import_skips.sql
memory/src-tauri/src/: api.rs  api_server.rs  audit.rs  commands.rs  embed_pipeline.rs  global_shortcut.rs  importance.rs  lib.rs  main.rs  mcp_bridge.rs  providers.rs  retrieval.rs  schema.rs  signals.rs  usage.rs  vec_init.rs
memory/src-tauri/src/bundle/: export.rs  import.rs  mod.rs  tests.rs  types.rs
memory/src-tauri/src/capture/: email_imap.rs  ics.rs  mod.rs  processor.rs  worker.rs
memory/src-tauri/src/consolidation/: mod.rs  run.rs  summarize.rs  topics.rs  worker.rs
memory/src-tauri/src/db/: mod.rs  queries.rs
memory/src-tauri/src/embed/: adapter.rs  gateway.rs  local.rs  mod.rs
memory/src-tauri/src/extract/: anthropic.rs  gateway.rs  local.rs  mod.rs  openai_compat.rs  prompt.rs  validate.rs
memory/src-tauri/src/import/: export.rs  mod.rs  scanner.rs  watcher.rs
memory/src-tauri/src/import/parsers/: claude_auto.rs  claude_md.rs  mod.rs
memory/src-tauri/src/keystore/: db_fallback.rs  keychain.rs  mod.rs
memory/src-tauri/src/mcp/: mod.rs  server.rs  sse.rs  tools.rs
memory/src-tauri/src/selection_popover/: detector.rs  geometry.rs  mod.rs  panel.rs  permission.rs
memory/src-tauri/tests/: upgrade.rs
memory/src/app/: globals.css  layout.tsx
memory/src/app/(main)/: layout.tsx  page.tsx
memory/src/app/(main)/agents/: page.tsx
memory/src/app/(main)/audit/: page.tsx
memory/src/app/(main)/entities/: page.tsx
memory/src/app/(main)/entity/: page.tsx
memory/src/app/(main)/import/: page.tsx
memory/src/app/(main)/search/: page.tsx
memory/src/app/(main)/settings/: page.tsx
memory/src/app/(main)/themes/: page.tsx
memory/src/app/(main)/usage/: page.tsx
memory/src/app/(popup)/: layout.tsx
memory/src/app/(popup)/quick-capture/: page.tsx
memory/src/app/(popup)/selection-popover/: page.tsx
memory/src/components/: Capture.tsx  EntityChip.tsx  HomeChainStrip.tsx  Timeline.tsx  merge-pairs.tsx  shell.tsx  ui.tsx
memory/src/lib/: tauri.ts  types.ts  utils.ts
memory/src/lib/i18n/: index.tsx
memory/src/lib/i18n/dictionaries/: en.json  zh-CN.json
memory/tools/: cairn-tunnel.sh
memory/tools/browser-ext/: README.md  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
memory/tools/browser-ext/src/background/: index.ts
memory/tools/browser-ext/src/content/: controller.ts  index.ts  passive-indicator.ts  save-badge.ts  save-toast.ts  slash-picker.ts  styles.ts  types.ts
memory/tools/browser-ext/src/content/sites/: chatgpt.ts  claude.ts  deepseek.ts  doubao.ts  gemini.ts  genspark.ts  index.ts  kimi.ts  manus.ts  mira.ts  tongyi.ts
memory/tools/browser-ext/src/lib/: cairn.ts  diagnostics.ts  settings.ts  types.ts
memory/tools/browser-ext/src/options/: index.html  options.css  options.ts
memory/tools/browser-ext/src/popup/: index.html  popup.css  popup.ts
tools/distill/: .gitignore  README.md  pyproject.toml
tools/distill/src/distill/: __init__.py  embed_finetune.py  eval.py  export.py  prompts.py  schema.py  seeds.py  synth.py  train.py
tools/distill/tests/: test_schema.py
tools/share-extension/: README.md
